k8s/backend_developer_technical_assessment/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
            - path: /scraper
              pathType: Prefix
              backend:
                service:
                  name: scraper
                  port:
                    number: 3000
